// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Whole component renders correctly 1`] = `
<div
  className="locationComposerBar"
>
  <div
    className="locationFieldContainer"
  >
    <span
      className="locationFieldLabel"
    >
      Add location 
    </span>
    <span
      className="locationFieldRemoveInput"
      onClick={[Function]}
    />
    <div
      style={
        Object {
          "display": "inline-block",
          "position": "relative",
        }
      }
    >
      <input
        aria-autocomplete="list"
        aria-expanded={false}
        autoComplete="off"
        className="locationFieldInput"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Start typing a location..."
        role="combobox"
        value="New York"
      />
    </div>
  </div>
</div>
`;

exports[`Whole component renders with cross to remove location when set 1`] = `
<div
  className="locationComposerBar"
>
  <div
    className="locationFieldContainer"
  >
    <span
      className="locationFieldLabel"
    >
      Add location 
    </span>
    <span
      className="locationFieldRemoveInput"
      onClick={[Function]}
    />
    <div
      style={
        Object {
          "display": "inline-block",
          "position": "relative",
        }
      }
    >
      <input
        aria-autocomplete="list"
        aria-expanded={false}
        autoComplete="off"
        className="locationFieldInput"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Start typing a location..."
        role="combobox"
        value="New York"
      />
    </div>
  </div>
</div>
`;

exports[`Whole component renders with location name when set 1`] = `
<div
  className="locationComposerBar"
>
  <div
    className="locationFieldContainer"
  >
    <span
      className="locationFieldLabel"
    >
      Add location 
    </span>
    <div
      style={
        Object {
          "display": "inline-block",
          "position": "relative",
        }
      }
    >
      <input
        aria-autocomplete="list"
        aria-expanded={false}
        autoComplete="off"
        className="locationFieldInput"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Start typing a location..."
        role="combobox"
        value="New York"
      />
    </div>
  </div>
</div>
`;
